s/controller/operator in yaml files

--- a/manifest/01-secrets.yaml
+++ b/manifest/01-secrets.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: appgate-controller-creds
+  name: appgate-operator-creds
   namespace: appgate-test-1
 type: Opaque
 data:
-  appgate-controller-user: YWRtaW4K
-  appgate-controller-password: YWRtaW4K
+  appgate-operator-user: YWRtaW4=
+  appgate-operator-password: YWRtaW4=
