--- a/manifest/01-config.yaml
+++ b/manifest/01-config.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: appgate-controller-conf
+  name: appgate-operator-conf
   namespace: appgate-test-1
 data:
-  appgate-controller: "https://envy-172-17-122-1.devops:444"
-  appgate-controller-timeout: "5"
+  appgate-operator-host: "https://envy-172-17-122-1.devops:444"
+  appgate-operator-timeout: "5"
