--- a/manifest/01-registry.yaml
+++ b/manifest/01-registry.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: appgate-registry
-  namespace: namespace
+  namespace: appgate-test-1
 data:
   .dockerconfigjson: base64loginfile
 type: kubernetes.io/dockerconfigjson
