--- a/examples/entitlement-bad.yaml
+++ b/examples/entitlement-bad.yaml
@@ -1,9 +1,9 @@
 apiVersion: "beta.appgate.com/v1"
 kind: Entitlement
 metadata:
-  name: my-new-entitlement
+  name: my-new-entitlement-bad
 spec:
-  name: my-new-entitlement
+  name: my-new-entitlement-bad
   site: 8a4add9e-0e99-4bb1-949c-c9faf9a49ad40v$y
   tags: 
     - k8s
