Add some more variables

--- a/manifest/01-config.yaml
+++ b/manifest/01-config.yaml
@@ -4,5 +4,7 @@ metadata:
   name: appgate-operator-conf
   namespace: appgate-test-1
 data:
-  appgate-operator-host: "https://envy-172-17-122-1.devops:444"
+  appgate-operator-host: "https://ec2-3-82-220-231.compute-1.amazonaws.com:444"
   appgate-operator-timeout: "5"
+  appgate-operator-dry-run: "0"
+  appgate-operator-cleanup: "1"
