--- a/manifest/02-appgate-operator.yaml
+++ b/manifest/02-appgate-operator.yaml
@@ -49,5 +49,10 @@ spec:
                 configMapKeyRef:
                   name: appgate-operator-conf
                   key: appgate-operator-cleanup
+            - name: APPGATE_OPERATOR_TWO_WAY_SYNC
+              valueFrom:
+                configMapKeyRef:
+                  name: appgate-operator-conf
+                  key: appgate-operator-two-way-sync
       imagePullSecrets:
         - name: appgate-registry
