Remove script and generate a docker image for building.
This image can be used also in pycharm

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,15 +2,15 @@ FROM python:rc-slim
 ARG SPEC_VERSION
 ENV SPEC_VERSION=$SPEC_VERSION
 ENV LOG_LEVEL=INFO
-ADD requirements.txt /root/
 RUN apt-get update && \
-    apt-get install gcc libffi-dev --yes && \
-    python3 -m venv /root/venv && \
+    apt-get install gcc libffi-dev --yes
+COPY requirements.txt /root/
+RUN python3 -m venv /root/venv && \
     /root/venv/bin/pip install -r /root/requirements.txt && \
     apt-get autoremove gcc --yes
-ADD appgate /root/appgate/
-ADD api_specs /root/appgate/api_specs/
-ADD docker/assets/run.sh /root/run.sh
+COPY appgate /root/appgate/
+COPY api_specs /root/api_specs/
+COPY docker/assets/run.sh /root/run.sh
 RUN chmod +x /root/run.sh
 WORKDIR /root
 ENTRYPOINT ["/root/run.sh"]
