--- a/api_specs/v13/policy.yml
+++ b/api_specs/v13/policy.yml
@@ -171,6 +171,7 @@ definitions:
             type: array
             description: List of Entitlement IDs in this Policy.
             items:
+              x-uuid-ref: Entitlement
               type: string
               format: uuid
               example: 4c07bc67-57ea-42dd-b702-c2d6c45419fc
@@ -211,6 +212,7 @@ definitions:
             type: array
             description: List of Administrative Role IDs in this Policy.
             items:
+              x-uuid-ref: AdministrativeRole
               type: string
               format: uuid
               example: 4c07bc67-57ea-42dd-b702-c2d6c45419fc
