--- a/docker/Dockerfile-build
+++ b/docker/Dockerfile-build
@@ -2,4 +2,5 @@ FROM python:rc-slim
 RUN apt-get update && \
     apt-get install make gcc libffi-dev --yes
 COPY requirements-build.txt /root/
+RUN pip3 install -r /root/requirements-build.txt
 WORKDIR /root
