--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -16,6 +16,9 @@ paths:
     $ref: '#/entity-test3'
   /entity-test4:
     $ref: '#/entity-test4'
+  /entity-test-with-id:
+    $ref: '#/entity-test-with-id'
+
     
 entity-test1:
   get:
@@ -61,6 +64,7 @@ entity-test3:
         application/json:
           schema:
             $ref: '#/definitions/EntityTest3'
+
 entity-test4:
   get:
     responses:
@@ -75,11 +79,40 @@ entity-test4:
         application/json:
           schema:
             $ref: '#/definitions/EntityTest4'
+
+entity-test-with-id:
+  get:
+    responses:
+      '200':
+        content:
+          application/json:
+            schema:
+              $ref: '#/definitions/EntityTestList'
+  post:
+    requestBody:
+      content:
+        application/json:
+          schema:
+            $ref: '#/definitions/EntityTestWithId'
+
 definitions:
   EntityTestList:
-    type: array
-    items:
-      type: string
+    type: object
+    properties:
+      range:
+        type: number
+      query:
+        type: string
+      orderBy:
+        type: string
+      descending:
+        type: bool
+      filterBy:
+        type: string
+      data:
+        type: array
+        items:
+          type: string
   EntityTest1:
     type: object
     properties:
@@ -128,4 +161,17 @@ definitions:
       fieldTwo:
         readOnly: true
         type: string
+  EntityTestWithId:
+    type: object
+    properties:
+      id:
+        type: string
+        uuid: format
+      fieldOne:
+        writeOnly: true
+        type: string
+      fieldTwo:
+        readOnly: true
+        type: string
+
 
