--- a/api_specs/v12/entitlement.yml
+++ b/api_specs/v12/entitlement.yml
@@ -168,6 +168,7 @@ definitions:
             description: If true, the Entitlement will be disregarded during authorization.
             default: false
           site:
+            x-uuid-ref: Site
             type: string
             format: uuid
             description: ID of the site for this Entitlement.
@@ -180,11 +181,10 @@ definitions:
               - or
             default: and
           conditions:
-            x-appgate-entity:
-              - Condition 
             type: array
             description: List of Condition IDs applies to this Entitlement.
             items:
+              x-uuid-ref: Condition
               type: string
               format: uuid
               example: 4c07bc67-57ea-42dd-b702-c2d6c45419fc
