--- a/api_specs/v13/site.yml
+++ b/api_specs/v13/site.yml
@@ -178,10 +178,11 @@ definitions:
             items:
               type: object
               properties:
-                from:
+                fromm:
                   type: string
                   format: uuid
                   x-uuid-ref: IpPool
+                  x-name: from
                   description: >-
                     IP Pool ID to map from.
                     If a user is authorizing with this IP Pool via Identity Provider assignment and has access to this
