Test what happens when we resolve array of objects with deps
this case was failing:

 - an array of objects that have dependencies themselves

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -364,10 +364,15 @@ definitions:
           obj2:
             type: object
             properties:
-              dep1:
-                type: string
-                format: uuid
-                x-uuid-ref: EntityDep1
+              deps1:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    dep1:
+                      type: string
+                      format: uuid
+                      x-uuid-ref: EntityDep1
               deps2:
                 type: array
                 items:
