Update devicescript.yml with checksum field

--- a/api_specs/v13/device_script.yml
+++ b/api_specs/v13/device_script.yml
@@ -208,6 +208,9 @@ definitions:
               Deprecated as of 5.0. Use checksumSha256 field.
             example: 9a913c1e1eccf35e6e78542b2152f7a7
           checksumSha256:
+            format:
+              type: checksum
+              source: file
             type: string
             readOnly: true
             description: >-
