--- a/api_specs/v12/device_script.yml
+++ b/api_specs/v12/device_script.yml
@@ -207,6 +207,9 @@ definitions:
               Deprecated as of 5.0. Use checksumSha256 field.
             example: 9a913c1e1eccf35e6e78542b2152f7a7
           checksumSha256:
+            format:
+              type: checksum
+              source: file
             type: string
             readOnly: true
             description: >-
