Add RingfenceRule entity (and deps)

--- a/api_specs/v12/policy.yml
+++ b/api_specs/v12/policy.yml
@@ -186,6 +186,7 @@ definitions:
             items:
               type: string
               format: uuid
+              x-uuid-ref: RingfenceRule
               example: 4c07bc67-57ea-42dd-b702-c2d6c45419fc
           ringfenceRuleLinks:
             type: array
