--- a/api_specs/v12/mfa_provider.yml
+++ b/api_specs/v12/mfa_provider.yml
@@ -203,6 +203,7 @@ definitions:
           sharedSecret:
             type: string
             writeOnly: true
+            format: password
             description: Radius shared secret to authenticate to the server.
           authenticationProtocol:
             type: string
@@ -239,6 +240,7 @@ definitions:
           challengeSharedSecret:
             type: string
             writeOnly: true
+            format: password
             description: ->
               Password sent to RADIUS to initiate multi-factor authentication. Required if "useUserPassword" is not
               enabled.
