--- a/api_specs/v13/mfa_provider.yml
+++ b/api_specs/v13/mfa_provider.yml
@@ -204,6 +204,7 @@ definitions:
           sharedSecret:
             type: string
             writeOnly: true
+            format: password
             description: Radius shared secret to authenticate to the server.
           authenticationProtocol:
             type: string
@@ -240,6 +241,7 @@ definitions:
           challengeSharedSecret:
             type: string
             writeOnly: true
+            format: password
             description: ->
               Password sent to RADIUS to initiate multi-factor authentication. Required if "useUserPassword" is not
               enabled.
