Add ApplianceCustomziation and deps

--- a/api_specs/v12/appliance.yml
+++ b/api_specs/v12/appliance.yml
@@ -412,6 +412,7 @@ definitions:
           customization:
             type: string
             format: uuid
+            x-uuid-ref: ApplianceCustomization
             description: Customization assigned to this Appliance.
             example: 4c07bc67-57ea-42dd-b702-c2d6c45419fc
           clientInterface:
