Add AdminMfaSettings entity

--- a/api_specs/v12/admin_mfa_settings.yml
+++ b/api_specs/v12/admin_mfa_settings.yml
@@ -69,6 +69,7 @@ definitions:
       providerId:
         type: string
         format: uuid
+        x-uuid-ref: MfaProvider
         description: The MFA provider ID to use during Multi-Factor Authentication. If null, Admin MFA is disabled.
         example: 4c07bc67-57ea-42dd-b702-c2d6c45419fc
       exemptedUsers:
