Add LocalUser entity

--- a/api_specs/v12/local_user.yml
+++ b/api_specs/v12/local_user.yml
@@ -166,6 +166,7 @@ definitions:
           password:
             type: string
             writeOnly: true
+            format: password
             description: Password for the user. Omit the field to keep the old password when updating a user.
             example: 'tSW3!QBv(rj{UuLY'
           email:
