--- a/api_specs/v13/local_user.yml
+++ b/api_specs/v13/local_user.yml
@@ -166,6 +166,7 @@ definitions:
             example: Tables
           password:
             type: string
+            format: password
             writeOnly: true
             description: Password for the user. Omit the field to keep the old password when updating a user.
             example: 'tSW3!QBv(rj{UuLY'
