Test that PEM is not loaded

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -448,6 +448,7 @@ definitions:
     properties:
       fieldOne:
         type: string
+        format: PEM
       fieldTwo:
         type: object
         format:
