Test that we get diffs in PEMs

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -446,6 +446,11 @@ definitions:
   EntityCert:
     type: object
     properties:
+      id:
+        type: string
+        format: uuid
+      name:
+        type: string
       fieldOne:
         type: string
         format: PEM
