Use new PEM/certificate format in the openapi spec

--- a/api_specs/v12/ca.yml
+++ b/api_specs/v12/ca.yml
@@ -145,6 +145,9 @@ definitions:
     type: object
     description: X509 certificate details.
     readOnly: true
+    format:
+      type: certificate
+      source: pem
     properties:
       version:
         type: number
