--- a/api_specs/v13/ca.yml
+++ b/api_specs/v13/ca.yml
@@ -159,6 +159,9 @@ definitions:
   CertificateDetails:
     type: object
     description: X509 certificate details.
+    format:
+      type: certificate
+      source: pem
     readOnly: true
     properties:
       version:
